Version 1.1.0-CVS (?? ??? 2005)
 - Moved initialization code into new WebCalendar class. Removed
   includes/connect.php because all its code is in
   includes/classes/WebCalendar.class now. Only files that still have
   initialization code are includes/user*.php
 - Fixed bug 1221727: error in documentation for using iframe with upcoming.php
 - Added new naming conventions to Developer's Guide, fixed spelling mistakes,
   XHTML validation, and formatting consistency
 - Patch 1220042: Make arguments to assert() strings so we get error messages
 - Patch 1208257: use event object for parameters
 - Palm Desktop datebook import works for versions 4.1.1 and newer
 - Fixed bug 1219427: icalclient fails to publish alarms
 - Fixed bug 1218113: iCal ATTENDEE error if event is deleted
 - Fixed bug: category was lost wan clicking on prev/next month in month.php
 - Fixed bug 1211406: User Access Control enabled: has been displayed in 2 tabs
 - Fixed bug 1212672: Install script - javascript errors
 - Fixed bug 1212667: Install script - Database Type Problem
 - Added logic to only spermit etting persistent connections if allowed and not CGI
 - Added ability to delete user info from webcal tables for ldap and postnuke auth
 - Fixed bug 1209649: Undefined variable in html_for_event_day_at_a_glance
 - Patch 1021410: Unobtrusive JS for event popups
 - Fixed bug 1205151: use of undefined variable in edit_entry.php
 - Fixed bug 1205680: upcoming.php was including unapproved.  will now use
   user preferences for displaying unapproved.
 - Patch 810460: fix length of salt in call to crypt for NIS authentication
 - Added new view (view_r.php) that will display similar to day.php and week.php
   do now except for multiple users.
 - Patch 1090615: read/write remote ical subscription (icalclient.php)
 - Don't allow LDAP or NIS as option in install/index.php if modules are
   not available.
 - Patch 1206167: use define for constant variables
 - Patch 1206560: allow site extras in reports